--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
