--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^6.9.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.16.1",
