--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "ethers": "^6.9.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
